fix: optimize blog styling for readability

--- a/_sass/_syntax_everforest.scss
+++ b/_sass/_syntax_everforest.scss
@@ -15,6 +15,8 @@
   font-size: 90%;
   padding: 0.15rem 0.35rem;
   border-radius: 0.25rem;
+  hyphens: none;
+  -webkit-hyphens: none;
 }
 
 .highlight {
